added commans ls and cd