@@ -8,14 +8,13 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.regex.PatternSyntaxException;
-
+import java.util.stream.Collectors;
 
 /**
  * Класс, выполняющий команды CLI.
@@ -31,10 +30,6 @@ public class Executor {
 
     /**
      * Выполняет переданную команду.
-     *
-     * @param command команда для выполнения
-     * @param input входные данные для команды (может быть null)
-     * @return вывод команды
      */
     public String execute(Command command, String input) {
         return switch (command.getName()) {
@@ -48,8 +43,70 @@ public class Executor {
             }
             case "set" -> executeSet(command, input);
             case "grep" -> executeGrep(command, input);
+            case "ls" -> executeLs(command, input);
+            case "cd" -> executeCd(command, input);
             default -> executeExternal(command, input);
         };
+    }
+
+    /**
+     * Реализация команды `cd`.
+     */
+    private String executeCd(Command command, String input) {
+        if (command.getArguments().size() > 1) {
+            return "cd: too many arguments";
+        }
+
+        String target = command.getArguments().isEmpty()
+                ? System.getProperty("user.home")
+                : command.getArguments().get(0);
+
+        try {
+            Path newPath = resolvePath(target);
+
+            if (!Files.exists(newPath)) {
+                return "cd: " + target + ": No such file or directory";
+            }
+            if (!Files.isDirectory(newPath)) {
+                return "cd: " + target + ": Not a directory";
+            }
+
+            environment.setCurrentDirectory(newPath.toString());
+            return "";
+        } catch (InvalidPathException e) {
+            return "cd: " + target + ": Invalid path";
+        } catch (Exception e) {
+            return "cd: " + e.getMessage();
+        }
+    }
+
+    /**
+     * Реализация команды `ls`.
+     */
+    private String executeLs(Command command, String input) {
+        if (command.getArguments().size() > 1) {
+            return "ls: too many arguments";
+        }
+
+        Path dir = command.getArguments().isEmpty()
+                ? Paths.get(environment.getCurrentDirectory())
+                : resolvePath(command.getArguments().get(0));
+
+        try {
+            if (!Files.exists(dir)) {
+                return "ls: cannot access '" + dir + "': No such file or directory";
+            }
+            if (!Files.isDirectory(dir)) {
+                return "ls: '" + dir + "': Not a directory";
+            }
+
+            return Files.list(dir)
+                    .map(p -> p.getFileName().toString())
+                    .sorted()
+                    .collect(Collectors.joining(" "));
+        } catch (IOException e) {
+            return "ls: " + e.getMessage();
+        }
     }
 
     /**
@@ -83,9 +140,12 @@ public class Executor {
         StringBuilder output = new StringBuilder();
         for (String fileName : command.getArguments()) {
             try {
-                output.append(new String(java.nio.file.Files.readAllBytes(java.nio.file.Paths.get(fileName)))).append("\n");
-            } catch (IOException e) {
+                Path filePath = resolvePath(fileName);
+                output.append(Files.readString(filePath)).append("\n");
+            } catch (NoSuchFileException e) {
                 output.append("cat: ").append(fileName).append(": No such file\n");
+            } catch (IOException e) {
+                output.append("cat: ").append(fileName).append(": ").append(e.getMessage()).append("\n");
             }
         }
         return output.toString();
@@ -125,7 +185,7 @@ public class Executor {
      * Выводит текущую директорию.
      */
     private String executePwd() {
-        return System.getProperty("user.dir");
+        return environment.getCurrentDirectory();
     }
 
     /**
@@ -133,30 +193,19 @@ public class Executor {
      */
     private String executeExternal(Command command, String input) {
         try {
-            ProcessBuilder processBuilder = new ProcessBuilder(command.getFullCommand());
-            processBuilder.redirectErrorStream(true);
-            Process process = processBuilder.start();
+            Process process = new ProcessBuilder(command.getFullCommand())
+                    .directory(Paths.get(environment.getCurrentDirectory()).toFile())
+                    .start();
 
             if (input != null) {
                 try (OutputStream os = process.getOutputStream()) {
                     os.write(input.getBytes());
-                    os.flush();
                 }
             }
 
-            ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
-            try (InputStream is = process.getInputStream()) {
-                byte[] buffer = new byte[1024];
-                int length;
-                while ((length = is.read(buffer)) != -1) {
-                    outputStream.write(buffer, 0, length);
-                }
-            }
-
-            process.waitFor();
-            return outputStream.toString();
-        } catch (IOException | InterruptedException e) {
-            return "Error while executing command: " + e.getMessage();
+            return new String(process.getInputStream().readAllBytes());
+        } catch (IOException e) {
+            return "Error while executing command";
         }
     }
 
@@ -164,9 +213,11 @@ public class Executor {
         if (command.getArguments().isEmpty()) {
             return "set: missing variable name or value";
         }
+
         String arg = command.getArguments().get(0);
 
         String[] parts = arg.split("=", 2);
+
         if (parts.length < 2) {
             return "set: invalid syntax. Use: set VAR_NAME=value";
         }
@@ -178,9 +229,9 @@ public class Executor {
         return "";
     }
 
+
     /**
      * Реализация команды `grep`.
-     * Ищет строки, соответствующие заданному шаблону.
      */
     private String executeGrep(Command command, String input) {
         GrepParameters params = new GrepParameters();
@@ -194,5 +245,20 @@ public class Executor {
         } catch (ParameterException e) {
             return "grep: " + e.getMessage();
         }
+    }
+
+
+    /**
+     * Преобразует путь с учетом текущей директории.
+     */
+    private Path resolvePath(String path) {
+        Path p = Paths.get(path);
+        if (p.isAbsolute()) {
+            return p;
+        }
+        if (path.startsWith("~")) {
+            return Paths.get(System.getProperty("user.home"), path.substring(1));
+        }
+        return Paths.get(environment.getCurrentDirectory(), path);
     }
 }
